[workspace]
resolver = "2"
members = [
    "zk-params",
    "block-cdn",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["ADnet Contributors <dev@adnet.io>"]
homepage = "https://adnet.io"
repository = "https://github.com/BlockBlox-MD/adnet-services"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1"
futures = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio-util = { version = "0.7", features = ["io"] }
