[package]
name = "adnet-block-cdn"
description = "Block CDN service for ADnet - serves blockchain blocks for fast sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "block-cdn-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
sha2.workspace = true
hex.workspace = true
bytes.workspace = true
futures.workspace = true
async-compression.workspace = true
tokio-util.workspace = true
