[package]
name = "adnet-zk-params"
description = "ZK Parameters CDN service for ADnet - serves proving/verification keys"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "zk-params-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
sha2.workspace = true
hex.workspace = true
bytes.workspace = true
futures.workspace = true
async-compression.workspace = true
tokio-util.workspace = true
